[package]
name = "locky"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feanor-math = { version = "3.1.6", features = ["unstable-enable"] }
rand = "0.9.0"
aes-gcm = "0.10.3"
aes-kw = "0.2.1"
bitvec = "1.0.1"
fips203 = "0.4.3"
sha3 = "0.10.8"

[dev-dependencies]
aes = "0.8.3"